# zed-convex-helper

./: .gitignore  Cargo.toml  README.md  extension.toml  main.rs
.zed/: setting.json
src/: engine.rs  main.rs  mcp.rs
src/reporter/: cli.rs  mod.rs
src/rules/: architecture.rs  context.rs  schema.rs
test/: analyzer_test.rs  arch_rules_test.rs  client_rules_test.rs  config_test.rs  convex_guidance_matrix_test.rs  convex_guidance_rules_test.rs  correctness_rules_test.rs  diagnostic_test.rs  e2e_test.rs  engine_test.rs  main_cli_test.rs  new_arch_rules_test.rs  new_correctness_rules_test.rs  new_perf_rules_test.rs  perf_rules_test.rs  project_test.rs  reporter_test.rs  rules_test.rs  schema_rules_test.rs  scoring_test.rs  security_rules_test.rs  tier1_correctness_rules_test.rs  tier1_perf_rules_test.rs  tier1_security_rules_test.rs  tier2_arch_rules_test.rs  tier3_config_rules_test.rs  tier3_schema_rules_test.rs  visitor_extensions_test.rs
test/fixtures/: bad_patterns.ts  basic_query.ts  direct_function.ts  first_call_pattern.ts  multi_export_declarators.ts  old_syntax.ts  perf_pattern.ts  runtime_import_issue.ts  runtime_use_node_browser_import.ts  schema_many_indexes.ts  schema_many_optional.ts  schema_patterns.ts  schema_searc_no_filter.ts  secrets_test.ts  spoofable_access.ts  use_node.ts
zed/: Cargo.toml  README.md  extension.toml
zed/src/: lib.rs
