[package]
name = "zed_convex"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = [
    "fs",
    "io-std",
    "sync",
    "rt-multi-thread",
] }
tower-lsp = "0.20.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json ="1.0.149"
webbrowser = "1.2.0"
zed_extension_api = "0.7.0"
oxc_allocator = "0.122.0"
oxc_parser = "0.122.0"
oxc_ast = "0.122.0"
oxc_ast_visit = "0.122.0"
oxc_span = "0.122.0"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
owo-colors = "4"
toml = "1.1.0+spec-1.1.0"
regex = "1"
glob = "0.3"
semver = "1"
